Add more details to windows nekoray run instructions

--- a/index.html
+++ b/index.html
@@ -642,7 +642,9 @@
 									<p x-text="$t('nekoraySplit4')"></p>
 									<p x-text="$t('nekoraySplit5')"></p>
 									<p class="fs-5 fw-bold mt-4">6. <span x-text="$t('doRun')"></span></p>
-									<p x-text="$t('nekorayRun')"></p>
+									<p x-text="$t('nekorayRun1')"></p>
+									<p x-text="$t('nekorayRun2')"></p>
+									<p x-text="$t('nekorayRun3')"></p>
 									<hr class="divider mb-2">
 									<p x-text="$t('troubleWin1')"></p>
 									<p x-text="$t('troubleWin2')"></p>
@@ -887,7 +889,11 @@
 					nekoraySplit3: 'Paste the JSON configuration. For example, these rules for Discord and popular browsers:',
 					nekoraySplit4: 'For "Outbound by default," select the bypass mode. Click OK',
 					nekoraySplit5: 'Go to "Settings" -> "Route Settings" -> "General" and select "ipv4_only" for both "Domain Strategy" and "Server Address Selection Strategy." Click OK',
-					nekorayRun: 'Select one of the servers, right-click on it, and click "Start"',
+					nekorayRun1: 'Select one of the servers, right-click on it, and click "Start"',
+					nekorayRun2: 'If something isn’t working, check whether you have enabled the "TUN Mode" or "System Proxy Mode" toggle. One of these must be enabled.',
+					nekorayRun3: 'If the internet is not working, wait a couple of minutes for the program to initialize everything necessary or try a different mode (TUN/System Proxy).',
+
+
 					
 					//InvisibleMan
 					invManAddConf1: 'You can write anything in the "Remarks" field, but it is mandatory to enter',
@@ -977,7 +983,9 @@
 					nekoraySplit3: 'Вставьте JSON конфигурацию. Например, эти правила для Discord и популярных браузеров:',
 					nekoraySplit4: 'Outbound по умолчанию» выберите режим bypass. Нажмите ОК',
 					nekoraySplit5: 'Зайдите в «Настройка» -> «Настройка маршрутов» -> «Общие» и выберите в пунктах "Стратегия доменов" и "Стратегия выбора адреса сервера" параметр "ipv4_only". Нажмите ОК',
-					nekorayRun: 'Выбрать один из серверов, нажать правой кнопкой мыши и нажать "Запустить"',
+					nekorayRun1: 'Выбрать один из серверов, нажать правой кнопкой мыши и нажать "Запустить"',
+					nekorayRun2: 'Если у вас что-то не заработало — проверьте включиили ли вы галочку "Режим TUN" или "Режим системного прокси". Одна из галочек обязательно должна быть включена',
+					nekorayRun3: 'Если интернет не работает, подождите пару минут, пока программа запустит всё необходимое или попробуйте другой режим (TUN/Системный прокси',
 					
 					//InvisibleMan
 					invManAddConf1: 'В поле "Remarks" можно написать что-угодно, но обязательно нужно написать',
