Fix some strings

--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
 					nekoraySplit5: 'Go to "Settings" -> "Route Settings" -> "General" and select "ipv4_only" for both "Domain Strategy" and "Server Address Selection Strategy." Click OK',
 					nekorayRun1: 'Select one of the servers, right-click on it, and click "Start"',
 					nekorayRun2: 'If something isn’t working, check whether you have enabled the "TUN Mode" or "System Proxy Mode" toggle. One of these must be enabled.',
-					nekorayRun3: 'If the internet is not working, wait a couple of minutes for the program to initialize everything necessary or try a different mode (TUN/System Proxy).',
+					nekorayRun3: 'If the internet is not working, wait a couple of minutes for the program to initialize everything necessary or try a different mode (TUN/System Proxy)',
 
 
 					
@@ -985,7 +985,7 @@
 					nekoraySplit5: 'Зайдите в «Настройка» -> «Настройка маршрутов» -> «Общие» и выберите в пунктах "Стратегия доменов" и "Стратегия выбора адреса сервера" параметр "ipv4_only". Нажмите ОК',
 					nekorayRun1: 'Выбрать один из серверов, нажать правой кнопкой мыши и нажать "Запустить"',
 					nekorayRun2: 'Если у вас что-то не заработало — проверьте включиили ли вы галочку "Режим TUN" или "Режим системного прокси". Одна из галочек обязательно должна быть включена',
-					nekorayRun3: 'Если интернет не работает, подождите пару минут, пока программа запустит всё необходимое или попробуйте другой режим (TUN/Системный прокси',
+					nekorayRun3: 'Если интернет не работает, подождите пару минут, пока программа запустит всё необходимое или попробуйте другой режим (TUN/Системный прокси)',
 					
 					//InvisibleMan
 					invManAddConf1: 'В поле "Remarks" можно написать что-угодно, но обязательно нужно написать',
