Add marzban donate and support links instead of blank boosty and t.me, add instructions for page updating

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				document.getElementById("href-windows-invisibleman").href = `invxray://subscription/${linkFull}`;
 				
 				// Change support and donate links below
-				document.getElementById("href-support").href = `https://t.me/`;
-				document.getElementById("href-donate").href = `https://boosty.to/`;
+				document.getElementById("href-support").href = `https://t.me/gozargah_marzban`;
+				document.getElementById("href-donate").href = `https://github.com/Gozargah/Marzban#donation`;
 			}
 		</script>
 		<style>
@@ -892,8 +892,6 @@
 					nekorayRun1: 'Select one of the servers, right-click on it, and click "Start"',
 					nekorayRun2: 'If something isn’t working, check whether you have enabled the "TUN Mode" or "System Proxy Mode" toggle. One of these must be enabled.',
 					nekorayRun3: 'If the internet is not working, wait a couple of minutes for the program to initialize everything necessary or try a different mode (TUN/System Proxy)',
-
-
 					
 					//InvisibleMan
 					invManAddConf1: 'You can write anything in the "Remarks" field, but it is mandatory to enter',
