Change bottom padding for easy removing of the donation button (personalization)

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 				<path d="M6.41257 8.64705C7.48252 8.33646 8.5037 8.73022 8.88054 8.96593L9 9.44889C8.62315 9.21319 7.60198 8.81943 6.53203 9.13001C5.46208 9.44059 4.0854 10.1853 3.5308 10.5188L3.41134 10.0359C3.96594 9.70234 5.34262 8.95763 6.41257 8.64705Z" />
 			</symbol>
 		</svg>
-		<div class="container my-container py-3" x-data>
+		<div class="container my-container py-3 pb-5" x-data>
 			
 			<!-- Copied to clipboard notification -->
 			<div class="toast-container position-fixed bottom-0 start-50 translate-middle-x p-3">
@@ -974,7 +974,7 @@
 			
 			<!-- Donate -->
 			<a id="href-donate">
-				<button type="button" class="btn my-btn mt-4 mb-5 w-100" x-text="$t('donate')"></button>
+				<button type="button" class="btn my-btn mt-4 w-100" x-text="$t('donate')"></button>
 			</a>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
