Update Chinese and Persian translations for v2rayN in marzneshin page

--- a/marzneshin/index.html
+++ b/marzneshin/index.html
@@ -1272,8 +1272,8 @@
 				
 					//v2rayN
 					v2rayNupdateSub: '在顶部，点击：订阅组 -> 无代理更新订阅',
-					v2rayNtun1: '如果您在俄罗斯联邦，请在顶部选择俄罗斯的设置：设置 -> 地区预设设置 -> 俄罗斯',
-					v2rayNtun2: '在底部的 "路由" 部分，您可以选择 "除了俄罗斯的所有" 模式——除种子和所有俄罗斯 IP 外的所有流量通过代理/VPN 路由',
+					v2rayNtun1: '在顶部，如果你在默认地区，请选择设置：设置 -> 区域预设设置 -> 默认',
+					v2rayNtun2: '在底部的“路由”部分，你可以选择“除了中国以外的所有内容”模式——所有流量（除了种子和所有中国的IP）通过代理/VPN路由',
 					v2rayNtun3: '您还可以启用 "启用 TUN" 切换，以便让不使用操作系统系统代理的程序通过代理工作（例如 Steam 或 Discord），如果需要',
 					v2rayNrun1: '从列表中选择一个服务器，右键单击它，然后选择 "设置为活动服务器"',
 					v2rayNrun2: '如果您未启用 TUN 模式，请在顶部启用 "系统代理模式"',
@@ -1376,8 +1376,8 @@
 				
 					//v2rayN
 					v2rayNupdateSub: 'در بالای صفحه کلیک کنید: گروه اشتراک -> به‌روزرسانی اشتراک‌ها بدون پروکسی',
-					v2rayNtun1: 'در بالای صفحه، تنظیمات مربوط به روسیه را انتخاب کنید اگر در فدراسیون روسیه هستید: تنظیمات -> تنظیمات منطقه‌ای -> روسیه',
-					v2rayNtun2: 'در پایین، در بخش "مسیر"، می‌توانید حالت "همه چیز به جز روسیه" را انتخاب کنید — تمام ترافیک به جز تورنت‌ها و IPهای روسیه از طریق پروکسی/VPN هدایت می‌شود',
+					v2rayNtun1: 'در بالا، اگر در ایران هستید، تنظیمات را انتخاب کنید: تنظیمات -> تنظیمات پیش‌فرض منطقه -> ایران',
+					v2rayNtun2: 'در پایین، در بخش «مسیر‌یابی»، می‌توانید حالت «همه چیز به جز ایران» را انتخاب کنید — تمام ترافیک به جز تورنت‌ها و همه آدرس‌های IP ایران از طریق پروکسی/VPN مسیریابی می‌شود',
 					v2rayNtun3: 'همچنین می‌توانید گزینه "فعال کردن TUN" را روشن کنید تا برنامه‌هایی که از پروکسی سیستم عامل استفاده نمی‌کنند (مثل Steam یا Discord) از طریق پروکسی کار کنند',
 					v2rayNrun1: 'یکی از سرورها را از لیست انتخاب کنید، روی آن راست کلیک کرده و گزینه "به عنوان سرور فعال تنظیم کن" را انتخاب کنید',
 					v2rayNrun2: 'اگر حالت TUN را فعال نکرده‌اید، در بالا گزینه "حالت پروکسی سیستم" را روشن کنید',
@@ -1459,7 +1459,7 @@
 				document.getElementById("imgV2rayNg1").src = langImages.imgV2rayNg1;
 				document.getElementById("imgV2rayNg2").src = langImages.imgV2rayNg2;
 			}
-
+			
 			// Display current language as checked
 			function showActiveDropdownButton(btn, selectedBtn, isIndependent) {
 				if (isIndependent) {
