--- a/index.html
+++ b/index.html
@@ -317,9 +317,7 @@
 			<header class="d-flex flex-wrap align-items-center gap-2 mb-5 justify-content-between">
 				<img src="https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/logo.png" alt="Logo" width="32" height="32">
 				<ul class="nav align-items-center">
-					<li class="nav-item">
-						<a class="nav-link my-nav-link fw-semibold px-2" id="href-support" rel="noopener noreferrer" target="_blank" x-text="$t('support')"></a>
-					</li>
+					<li class="nav-item"><a class="nav-link my-nav-link fw-semibold px-2" id="href-support" rel="noopener noreferrer" target="_blank" x-text="$t('support')"></a></li>
 					<li class="nav-item">
 						<div class="dropdown">
 							<button class="nav-link my-nav-link dropdown-toggle d-flex align-items-center px-2" id="btn-lang" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -1042,10 +1040,7 @@
 				<p x-text="$t('faq2')"></p>
 			</div>
 			
-			<!-- Donate -->
-			<a id="href-donate">
-				<button type="button" class="btn my-btn mt-4 w-100" x-text="$t('donate')"></button>
-			</a>
+			<a id="href-donate"><button type="button" class="btn my-btn mt-4 w-100" x-text="$t('donate')"></button></a>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
 		<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
