Remove my-divider class, use m-0 and simple hr

--- a/index.html
+++ b/index.html
@@ -98,12 +98,6 @@
 				max-width: 64rem;
 			}
 			
-			.my-divider {
-				height: 2px;
-				padding: 0px;
-				margin : 0px;
-			}
-			
 			.my-dropdown-menu {
 				--bs-dropdown-border-radius: var(--bs-border-radius-xl);
 				--bs-dropdown-item-padding-x: .75rem;
@@ -432,7 +426,7 @@
 						<div class="accordion-body m-0 p-0 pb-2">
 							<div class="accordion" id="accordionOsIos">
 								<div class="accordion-item">
-									<hr class="my-divider">
+									<hr class="m-0">
 									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHiddify" aria-expanded="false" aria-controls="collapseOsIosHiddify">
 											<svg class="my-icon-small"><use href="#hiddify"></use></svg>
@@ -461,7 +455,7 @@
 										</div>
 									</div>
 								</div>
-								<hr class="my-divider">
+								<hr class="m-0">
 								<div class="accordion-item">
 									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosAlt" aria-expanded="false" aria-controls="collapseOsIosAlt">
@@ -497,7 +491,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="my-divider">
+											<hr class="m-0">
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosFoxray" aria-expanded="false" aria-controls="collapseOsIosFoxray">
@@ -523,7 +517,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="my-divider">
+											<hr class="m-0">
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosV2box" aria-expanded="false" aria-controls="collapseOsIosV2box">
@@ -550,7 +544,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="my-divider">
+											<hr class="m-0">
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosShadowrocket" aria-expanded="false" aria-controls="collapseOsIosShadowrocket">
@@ -576,7 +570,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="my-divider">
+											<hr class="m-0">
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosSingbox" aria-expanded="false" aria-controls="collapseOsIosSingbox">
@@ -622,7 +616,7 @@
 						<div class="accordion-body m-0 p-0 pb-2">
 							<div class="accordion" id="accordionOsAndroid">
 								<div class="accordion-item">
-									<hr class="my-divider">
+									<hr class="m-0">
 									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsAndroidHiddify" aria-expanded="false" aria-controls="accordionOsAndroidHiddify">
 											<svg class="my-icon-small"><use href="#hiddify"></use></svg>
@@ -650,7 +644,7 @@
 										</div>
 									</div>
 								</div>
-								<hr class="my-divider">
+								<hr class="m-0">
 								<div class="accordion-item">
 									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsAndroidAlt" aria-expanded="false" aria-controls="accordionOsAndroidAlt">
@@ -695,7 +689,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="my-divider">
+											<hr class="m-0">
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsAndroidCMFA" aria-expanded="false" aria-controls="accordionOsAndroidCMFA">
@@ -722,7 +716,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="my-divider">
+											<hr class="m-0">
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidSingbox" aria-expanded="false" aria-controls="collapseOsAndroidSingbox">
@@ -766,7 +760,7 @@
 					<div id="collapseWindows" class="accordion-collapse collapse" data-bs-parent="#accordionOs">
 						<div class="accordion" id="accordionOsWindows">
 							<div class="accordion-item">
-								<hr class="my-divider">
+								<hr class="m-0">
 								<h2 class="accordion-header">
 									<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsWindowsHiddify" aria-expanded="false" aria-controls="accordionOsWindowsHiddify">
 										<svg class="my-icon-small"><use href="#hiddify"></use></svg>
@@ -801,7 +795,7 @@
 									</div>
 								</div>
 							</div>
-							<hr class="my-divider">
+							<hr class="m-0">
 							<div class="accordion-item">
 								<h2 class="accordion-header">
 									<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsWindowsAlt" aria-expanded="false" aria-controls="accordionOsWindowsAlt">
@@ -867,7 +861,7 @@
 												</div>
 											</div>
 										</div>
-										<hr class="my-divider">
+										<hr class="m-0">
 										<div class="accordion-item">
 											<h2 class="accordion-header">
 												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsWindowsV2rayN" aria-expanded="false" aria-controls="collapseOsWindowsV2rayN">
@@ -915,7 +909,7 @@
 												</div>
 											</div>
 										</div>
-										<hr class="my-divider">
+										<hr class="m-0">
 										<div class="accordion-item">
 											<h2 class="accordion-header">
 												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsWindowsInvisibleman" aria-expanded="false" aria-controls="collapseOsWindowsInvisibleman">
@@ -954,7 +948,7 @@
 												</div>
 											</div>
 										</div>
-										<hr class="my-divider">
+										<hr class="m-0">
 										<div class="accordion-item">
 											<h2 class="accordion-header">
 												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsWindowsClashVergeRev" aria-expanded="false" aria-controls="collapseOsWindowsClashVergeRev">
